# libvideo-scale

./: CMakeLists.txt  README.md  atom.mk  config.in
core/include/video-scale/: vscale_core.h  vscale_internal.h
core/src/: vscale_core.c  vscale_enums.c
include/video-scale/: vscale.h
libyuv/include/video-scale/: vscale_libyuv.h
libyuv/src/: vscale_libyuv.c
src/: vscale.c  vscale_priv.h
tools/: vscale.c
